feat(app): manage specific display for sub classes

--- a/test/_test.scss
+++ b/test/_test.scss
@@ -22,11 +22,21 @@
     }
   }
 
+  // button--cancel
   &--cancel {
     background: $mercury;
 
+    // button--cancel:hover
     &:hover {
       background: $mercury-D5;
+    }
+  }
+
+  // button sub
+  .sub {
+    // button sub__value
+    &__value {
+
     }
   }
 
